# rust-algorithms

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
game_of_life/: Cargo.toml  README.md
game_of_life/benches/: bench.rs  file.txt  main.rs
game_of_life/src/: cell.rs  lib.rs  universe.rs
sorting_algorithms/: Cargo.toml
sorting_algorithms/src/: insertion_sort.rs  main.rs  selection_sort.rs
sorting_algorithms/src/algorithms/: bingo_sort.rs  bubble_sort.rs  counting_sort.rs  heap_sort.rs  insertion_sort.rs  merge_sort.rs  mod.rs  quick_sort.rs  radix_sort.rs  selection_sort.rs  shell_sort.rs  sleep_sort.rs
sorting_algorithms/src/util/: mod.rs
