[package]
name = "jpcd_game_of_life"
version = "0.0.2"
edition = "2021"
description = "Implementation of Conway's game of life suitable for GUI applications."
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
