[package]
name = "jpcd_sorting_algorithms"
version = "0.0.1"
edition = "2021"
description = "Implementation of some sorting algorithms suitable for GUI applications."
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
num = "0.4.0"
